add link agenda

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="">Agenda</a>
+                    <a href="#agenda">Agenda</a>
                 </li>
             </ul>
         </nav>
@@ -31,7 +31,7 @@
             <input type="number" id="telefone" required placeholder="Numero do contato"/>
             <button type="submit">Adicionar</button>
         </form>
-        <table cellspacing="0">
+        <table cellspacing="0" id="agenda">
             <thead>
                 <tr>
                     <th>
