--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                 <li>
                     <a href="#agenda">Agenda</a>
                 </li>
+                <li>
+                    <a href="#">Lista de Tarefas</a>
+                </li>
             </ul>
         </nav>
         </div>
