add container e style

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <input type="number" id="telefone" required placeholder="Numero do contato"/>
             <button type="submit">Adicionar</button>
         </form>
-        <table cellspacing="0" id="agenda">
+        <table cellspacing="0" id="tabela-agenda">
             <thead>
                 <tr>
                     <th>
@@ -56,6 +56,7 @@
             </tfoot>
         </table>
     </div>
+    <footer>&copy Talkin -todos os direitos reservados 2024</footer>
     <script src="./main.js"></script>
 </body>
 </html>
