--- a/container.html
+++ b/container.html
@@ -12,11 +12,14 @@
 <body>
     <header>
         <div class="container">
-            <img src="./midia/black yellow minimalist Idea Logo.png" alt="logotipo escrito talkin em letras coloridas"/>
+            <img src="./Midias/black yellow minimalist Idea Logo.png" alt="logotipo escrito talkin em letras coloridas"/>
         <nav>
             <ul>
                 <li>
                     <a href="#lista-de-tarefas">Lista de atividades</a>
+                </li>
+                <li>
+                    <a href="./index.html">Agenda</a>
                 </li>
             </ul>
         </nav>
@@ -26,14 +29,19 @@
     <h1>LISTA DE TAREFAS</h1>
     <div class="body">
         <form id="lista-de-tarefas">
+            <img src="./Midias/icone_lista.jpg" alt="lista de checagem"/>
+            <label for="Atividade">Atividade:</label>
             <input id="tarefa" type="text" placeholder="Sua atividade aqui">
             <button type="submit">Adicionar</button>
         </form>
         <ul id="lista">
+            <li>
+                Sua atividade aqui
+            </li>
         </ul>
     </div>
         <footer>&copy Talkin -todos os direitos reservados 2024</footer>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="./main.css"></script>
+        <script src="./main.js"></script>
     </body>
 </html>
