--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
     <div class="body">
         <form id="form-agenda">
             <img src="./Midias/Icone_pessoa.png" alt="icone de uma pessoa"/>
+            <label for="Nome-contato">Nome:</label>
             <input type="text" id="Nome-contato" required placeholder="Nome do contato"/>
             <img src="./Midias/icone_telefone.png" alt="icone de telefone"/>
+            <label for="Nome-contato">Telefone:</label>
             <input type="number" id="telefone" required placeholder="Numero do contato"/>
             <button type="submit">Adicionar</button>
         </form>
