funcionalidade e integração do codigo JS a pag container index

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         </table>
     </div>
     <footer>&copy Talkin -todos os direitos reservados 2024</footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
     <script src="./main.js"></script>
 </body>
 </html>
