--- a/container.html
+++ b/container.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
 </head>
 <body>
     <header>
@@ -16,10 +18,10 @@
             <nav>
             <ul>
                 <li>
-                    <a href="#lista-de-tarefas">Lista de atividades</a>
+                    <a href="./index.html">Agenda</a>
                 </li>
                 <li>
-                    <a href="./index.html">Agenda</a>
+                    <a href="#lista-de-atividades">Lista de atividades</a>
                 </li>
             </ul>
         </nav>
